--- a/WebRoot/resources/css/login.css
+++ b/WebRoot/resources/css/login.css
@@ -1,14 +1,21 @@
 @CHARSET "UTF-8";
 body{
 				text-align: center;
-				background:url(../image/backgroud01.jpg) top left;
-				background-size:100% 100%;
-				overflow:hidden;
+				
+				
 			}
 #container{
+		
 		margin:0 auto;
 		padding:0;
 		
+	}
+	#title{
+		height:100px;
+	}
+#mid{
+		margin:0 auto;
+		width:1017px;
 	}
 .error {
      padding: 15px;
@@ -29,10 +36,27 @@ body{
      background-color: #d9edf7;
      border-color: #bce8f1;
  }
+ #left-kuang{
+ 				width:716px;
+ 				height:382px;
+ 				background:url(../image/backgroud02.jpg) top left;
+				background-size:100% 100%;
+				overflow:hidden;
+				float:left;
+ }
+ #right-kuang{
+ 				width:300px;
+ 				height:382px; 	
+ 				background:url(../image/t-1.jpg) top left;
+				background-size:100% 100%;
+				overflow:hidden;			
+				
+				float:left;
+ }
  #login-box {
-	 margin:0 auto;
+		padding-top:50px;
      width: 300px;
-     padding: 20px;
+      
     
  }
  
